--- a/sevn-frontend/styles/globals.css
+++ b/sevn-frontend/styles/globals.css
@@ -4,6 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  line-height: 1;
   font-family: -apple-system, IBM Plex Sans, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -15,4 +16,12 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 10px;
+  vertical-align: baseline;
+  background: transparent;
 }
+
