💄 add(mobile): secondary news layout

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -24,6 +24,13 @@
   gap: 2rem;
 }
 
+@media (max-width: 900px){
+  .secondaryNews > * {
+    width: calc(50% - 2rem);
+  }
+}
+
+
 @media (min-width: 900px){
 
   .categories, .mainNews{
