💄 fix(mobile): change page padding and font-size

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 5rem;
+  padding: 0 2rem;
 }
 
 .main {
@@ -32,7 +32,9 @@
 
 
 @media (min-width: 900px){
-
+  .container{
+    padding-inline: 5rem;
+  }
   .categories, .mainNews{
     display: flex;
     gap: 2rem;
